# hxdi

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  TESTING.md
.github/workflows/: issues.yml  release.yml  rust.yml
src/: args.rs  hex_read.rs  lib.rs  main.rs
src/tui/: actions.rs  app.rs  events.rs  mod.rs  render.rs  types.rs
tests/: assertions.rs  hex_tests.rs  speed_tests.rs
