[package]
name = "hxdi"
version = "0.2.4"
edition = "2024"
description = "a fast, flexible hex editor with nano-style TUI"
authors = ["namnam1105"]
license = "GPL-3.0"
repository = "https://github.com/namnam1105/hxdi"
keywords = ["hex","editor","tui","cli"]

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
crossterm = "0.29.0"
ratatui = "0.30.0"
